--- a/docs/style.css
+++ b/docs/style.css
@@ -48,6 +48,9 @@ h2 {
     padding-top: 10px;
     margin: 0px;
 }
+h3 {
+    padding: 5px;
+}
 hr {
     border: none;
     height: 5px;
@@ -89,6 +92,15 @@ p {
     font-size: 18px;
     padding-left: 10px;
     margin: 0px;
+}
+pre {
+    margin: 0px;
+}
+code {
+    font-size: 16px;
+    background-color: #f4f4f4;
+    padding: 2px 4px;
+    border-radius: 4px;
 }
 
 /* Footer */
